--- a/README
+++ b/README
@@ -15,7 +15,7 @@ earlier version. The compiler flags to link with the library are:
 
     -lgsl -lgslcblas -lm
 
-Optionally, portions of the codes are parallelizable with the OpenMP library,
+Optionally, portions of the code are parallelizable with the OpenMP library,
 which should be included with your compiler. 
 The program has been compiled with GCC versions 4.6.3 in the latest iteration.
 Earlier version should be fine, but the status of OpenMP implementation should be checked,
